Bug 1969782 - Account for the aToMarkedFrameUserSpace transform when setting up contextPaint for an SVG marker. r=longsonr

This makes the context-fill gradient used in the marker match how it's painted
in the context, regardless of the zoom or other transforms present. (This also
matches the rendering I see in Chrome.)

Includes a test that fails without the patch.

Differential Revision: https://phabricator.services.mozilla.com/D252021